--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,27 +1,81 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  display: block;
+  padding: 20px;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  background-color: #f5f5f5;
+  border-right: 1px solid #eee;
 }
 
 .nav-sidebar {
-    margin-right: -21px; /* 20px padding + 1px border */
-    margin-bottom: 20px;
-    margin-left: -20px;
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
 }
+
 .nav-sidebar > li > a {
-    padding-right: 20px;
-    padding-left: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
+
 .nav-sidebar > .active > a {
-    color: #fff;
-    background-color: #428bca;
+  color: #fff;
+  background-color: #428bca;
+}
+
+.personalPhoto {
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  max-width: 250px;
+  height: auto;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.display-grid {
+  display: grid;
+}
+
+.close_popup_content {
+  position: absolute;
+  top: -20px;
+  right: 0;
+  font-size: 47px;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+
+.button_to_down {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  margin: 0;
+}
+
+.popup {
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.popup_content {
+  height: 250px;
+  width: 500px;
+  background: #428bca;
+  padding: 20px 0 20px 0;
+  border-radius: 5px;
+  position: relative;
 }
