--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -32,6 +32,8 @@
   border: 1px solid #dee2e6;
   border-radius: .25rem;
   max-width: 250px;
+  min-width: 250px;
+  min-height: 150px;
   height: auto;
 }
 
