--- a/src/main/resources/style/main.css
+++ b/src/main/resources/style/main.css
@@ -3,7 +3,7 @@
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 10;
   display: block;
   padding: 20px;
   overflow-x: hidden;
@@ -80,4 +80,63 @@
   padding: 20px 0 20px 0;
   border-radius: 5px;
   position: relative;
+}
+
+#pop-ups {
+  display: none;
+  background: #333;
+  opacity: 80%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99
+}
+.center {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.form-input {
+  width: 250px;
+  padding: 20px;
+  background: #fff;
+  border: 2px dashed #555;
+}
+.form-input input {
+  display: none;
+}
+.form-input label {
+  display: block;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background: #333;
+  color: #fff;
+  font-size: 15px;
+  font-family: "Open Sans", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.form-input img {
+  width: 100%;
+  display: none;
+}
+.form-input .close_popup_content {
+  position: relative;
+  padding: 0px 395px 0px 225px;
+  color: #fff;
+  font-size: 47px;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+
+.closeCross {
+  cursor: pointer;
+  position: absolute;
 }
